# gpif-datakinds

./: .gitignore  IxFun.hs  LICENSE  README.md  gpif-datakinds.cabal
Control/IxFunctor/: Equality.hs  Iso.hs  IxFunctor.hs  List.hs  Nat.hs
src/Control/: IxFunctor.hs
src/Control/IxFunctor/: Equality.hs  EvenOdd.hs  Iso.hs  IxFunctor.hs  IxType.hs  List.hs  Nat.hs  RecScheme.hs  Rose.hs  ShowInstances.hs
src/Control/IxFunctor/Examples/: Examples.hs
